--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@goodev/short-id",
+  "name": "@gooodev/short-id",
   "version": "0.0.1",
   "description": "Short id generator for both browser and Node.js",
   "repository": {
