--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gooodev/short-id",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Short id generator for both browser and Node.js",
   "repository": {
     "type": "git",
@@ -16,12 +16,14 @@
   "exports": {
     "import": "./dist/index.js",
     "require": "./dist/index.cjs",
+    "browser": "./dist/index.global.js",
     "types": "./dist/index.d.ts"
   },
   "scripts": {
     "build": "pnpm tsup && pnpm tsc"
   },
   "devDependencies": {
+    "@types/node": "^20.3.1",
     "tsup": "^6.7.0",
     "typescript": "^5.1.3"
   },
