--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
+    "@types/uuid": "^9.0.2",
     "tsup": "^6.7.0",
     "typescript": "^5.1.3"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
   }
 }
